tests/posts/invalid/missing-slug.markdown
Title: Missing slug

Tags: News, Slugs, PHP

; Slug: missing-slug

Date: 2014-06-10

Body:

# Heading

Text.
